cha-pre-live-flux2/cha-eks-5a/namespaces/tesla-kafka-automation-systest/namespace-tesla-kafka-automation-systest.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: tesla-kafka-automation-systest
  name: tesla-kafka-automation-systest
